--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ RoxygenNote: 7.1.1
 Imports: 
   jsonlite (>= 1.7.2),
   usethis (>= 2.0.1),
+  R.utils (>= 2.11.0),
 Suggests:
   devtools (>= 2.4.1),
   testthat (>= 3.0.2),
