--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Query dependencies
         run: |
-          install.packages('remotes', 'devtools')
+          install.packages(c('remotes', 'devtools'))
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
