--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -21,11 +21,10 @@ jobs:
         config:
           - {os: windows-latest, r: '4.1.0'}
           - {os: macOS-latest, r: '4.1.0'}
-          - {os: ubuntu-20.04, r: '4.1.0', rspm: "https://packagemanager.rstudio.com/cran/latest/src/contrib/PACKAGES"}
+          - {os: ubuntu-20.04, r: '4.1.0'}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-      RSPM: ${{ matrix.config.rspm }}
 
     steps:
       # do not convert line feeds in windows
